--- a/Home.css
+++ b/Home.css
@@ -107,9 +107,52 @@
 }
 
 .u-section-4 .u-text-1 {
-  margin: 21px auto 60px 0;
+  margin: 21px auto 0 0;
+}
+
+.u-section-4 .u-image-1 {
+  width: 787px;
+  height: 413px;
+  margin: 21px auto 0 0;
+}
+
+.u-section-4 .u-text-2 {
+  margin: 30px auto 60px 0;
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 516px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 720px;
+    height: 378px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 422px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 540px;
+    height: 284px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 317px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 340px;
+    height: 179px;
+  }
 }.u-section-5 .u-sheet-1 {
-  min-height: 287px;
+  min-height: 331px;
 }
 
 .u-section-5 .u-text-1 {
@@ -126,31 +169,13 @@
 .u-section-5 .u-text-3 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 18px 431px 0 0;
+  margin: 20px 0 0;
 }
 
 .u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 21px auto 52px 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-5 .u-text-3 {
-    margin-right: 231px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-5 .u-text-3 {
-    margin-right: 11px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-5 .u-text-3 {
-    margin-right: 0;
-  }
+  margin: 19px auto 40px 0;
 }.u-section-6 .u-sheet-1 {
   min-height: 547px;
 }
