--- a/STACOM-workshop-paper.css
+++ b/STACOM-workshop-paper.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 377px;
+  min-height: 400px;
 }
 
 .u-section-1 .u-image-1 {
@@ -10,7 +10,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 374px;
+    min-height: 397px;
   }
 
   .u-section-1 .u-image-1 {
@@ -18,24 +18,33 @@
     height: 340px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 894px;
+  min-height: 612px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 0;
   line-height: 3;
-  margin: 60px 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-text-2 {
+  font-weight: 400;
+  line-height: 3;
+  font-size: 1rem;
+  margin: 0 0 22px;
 }
 
 .u-section-2 .u-btn-1 {
+  font-weight: 400;
+  font-family: 'Open Sans',sans-serif;
   background-image: none;
   font-size: 1rem;
-  margin-top: 0;
   padding: 0;
 }
 
-@media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 324px;
-  }
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
 }
