--- a/Organizer.css
+++ b/Organizer.css
@@ -1,21 +1,80 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 377px;
+  min-height: 483px;
 }
 
-.u-section-1 .u-image-1 {
-  width: 343px;
-  height: 343px;
-  margin: 17px auto;
+.u-section-1 .u-gallery-1 {
+  height: 423px;
+  grid-gap: 17px 17px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.u-section-1 .u-gallery-inner-1 {
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 17px;
+}
+
+.u-section-1 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 407px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 347px;
+    margin-top: 154px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 885px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 825px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1956px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 1896px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 374px;
+    min-height: 1157px;
   }
 
-  .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 340px;
+  .u-section-1 .u-gallery-1 {
+    height: 1206px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 83px;
@@ -131,43 +190,38 @@
     margin-top: -122px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 130px;
+  min-height: 196px;
 }
 
 .u-section-5 .u-image-1 {
-  width: 319px;
-  height: 127px;
-  margin: 0 auto 0 35px;
+  width: 168px;
+  height: 170px;
+  margin: 13px auto 0 92px;
 }
 
 .u-section-5 .u-text-1 {
   font-size: 0.875rem;
-  margin: -95px 171px 0 385px;
+  margin: -118px 178px 65px 386px;
 }
 
 @media (max-width: 1199px) {
   .u-section-5 .u-text-1 {
-    margin-right: 71px;
-    margin-left: 285px;
+    margin-right: 78px;
+    margin-left: 286px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-text-1 {
     margin-right: 0;
-    margin-left: 136px;
+    margin-left: 144px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-text-1 {
+    margin-bottom: 60px;
     margin-left: 0;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-5 .u-image-1 {
-    margin-left: 21px;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 202px;
@@ -176,7 +230,7 @@
 .u-section-6 .u-image-1 {
   width: 168px;
   height: 168px;
-  margin: 10px auto 0 92px;
+  margin: 17px auto 0 93px;
 }
 
 .u-section-6 .u-text-1 {
