--- a/Task2-T1-T2-mapping.css
+++ b/Task2-T1-T2-mapping.css
@@ -1,21 +1,79 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 377px;
+  min-height: 483px;
 }
 
-.u-section-1 .u-image-1 {
-  width: 343px;
-  height: 343px;
-  margin: 18px auto 16px;
+.u-section-1 .u-gallery-1 {
+  height: 423px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  grid-gap: 17px 17px;
+}
+
+.u-section-1 .u-gallery-inner-1 {
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 17px;
+}
+
+.u-section-1 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 675px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 349px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1128px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 802px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2093px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 1805px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 374px;
+    min-height: 1418px;
   }
 
-  .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 340px;
+  .u-section-1 .u-gallery-1 {
+    height: 1136px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 435px;
@@ -106,6 +164,12 @@
   font-size: 1rem;
   line-height: 1.8;
   margin: 20px 0 38px;
+}
+
+.u-section-4 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
