--- a/Home.css
+++ b/Home.css
@@ -1,21 +1,81 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 377px;
+  min-height: 483px;
 }
 
-.u-section-1 .u-image-1 {
-  width: 343px;
-  height: 343px;
-  margin: 17px auto;
+.u-section-1 .u-gallery-1 {
+  height: 423px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  grid-gap: 17px 17px;
+}
+
+.u-section-1 .u-gallery-inner-1 {
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 17px;
+}
+
+.u-section-1 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 675px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 349px;
+    margin-top: 135px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1128px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 802px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2093px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 1805px;
+    margin-top: 157px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 374px;
+    min-height: 1418px;
   }
 
-  .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 340px;
+  .u-section-1 .u-gallery-1 {
+    height: 1136px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 236px;
@@ -241,304 +301,65 @@
     width: auto;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 862px;
-}
-
-.u-section-7 .u-text-1 {
-  margin: 22px auto 0 0;
-}
-
-.u-section-7 .u-text-2 {
-  font-size: 1rem;
-  font-weight: 700;
-  margin: 22px auto 0 0;
-}
-
-.u-section-7 .u-table-1 {
-  margin-top: 29px;
-  margin-bottom: 60px;
-}
-
-.u-block-1130-11 {
-  height: 46px;
-}
-
-.u-section-7 .u-table-cell-1 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-2 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-3 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-4 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-5 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-6 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-7 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-8 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-9 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-10 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-11 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-12 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-13 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-14 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-15 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-16 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-17 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-18 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-19 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-20 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-21 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-22 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-23 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-24 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-25 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-26 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-27 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-28 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-29 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-30 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-31 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-32 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-33 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-34 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-35 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-36 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-37 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-38 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-39 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-40 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-41 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-42 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-43 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-44 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-45 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-46 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-47 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-48 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-49 {
-  background-image: none;
-}
-
-.u-section-7 .u-table-cell-50 {
-  background-image: none;
-}
-
-.u-block-1130-26 {
-  height: 46px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-text-2 {
-    margin-top: 42px;
-  }
-
-  .u-section-7 .u-table-1 {
-    margin-top: 9px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-7 .u-text-2 {
-    margin-top: 52px;
-  }
-
-  .u-section-7 .u-table-1 {
-    margin-top: 2px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-7 .u-text-2 {
-    margin-top: 131px;
-  }
-
-  .u-section-7 .u-table-1 {
-    margin-top: -77px;
-    margin-bottom: 24px;
-  }
-}.u-section-8 .u-sheet-1 {
   min-height: 558px;
 }
 
-.u-section-8 .u-text-1 {
+.u-section-7 .u-text-1 {
   margin-bottom: 0;
   margin-top: 20px;
 }
 
-.u-section-8 .u-text-2 {
+.u-section-7 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
   margin: 20px auto 0 0;
 }
 
-.u-section-8 .u-text-3 {
+.u-section-7 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-7 .u-text-3 {
   margin: 29px auto 0 0;
 }
 
-.u-section-8 .u-image-1 {
-  width: 570px;
-  height: 326px;
-  margin: -7px auto 56px;
+.u-section-7 .u-image-1 {
+  width: 745px;
+  height: 285px;
+  margin: 37px auto 53px;
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 548px;
+  }
+
+  .u-section-7 .u-image-1 {
+    width: 720px;
+    height: 275px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-8 .u-sheet-1 {
-    min-height: 541px;
+  .u-section-7 .u-sheet-1 {
+    min-height: 479px;
   }
 
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     width: 540px;
-    height: 309px;
+    height: 206px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-8 .u-sheet-1 {
-    min-height: 300px;
+  .u-section-7 .u-sheet-1 {
+    min-height: 403px;
   }
 
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     width: 340px;
-    height: 195px;
+    height: 130px;
   }
 }
