--- a/nicepage.css
+++ b/nicepage.css
@@ -41534,44 +41534,35 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: 26px auto 60px;
+  margin: 53px auto 0;
 }
 
 .u-header .u-nav-1 {
   font-weight: 400;
   font-size: 1rem;
   text-transform: uppercase;
+  letter-spacing: normal;
 }
 
 .u-header .u-nav-3 {
   font-size: 1rem;
   letter-spacing: 0px;
 }
-@media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-    margin-right: -493px;
-  }
 
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
+.u-header .u-image-1 {
+  width: 208px;
+  height: 94px;
+  margin: -67px auto 26px 71px;
+}
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    width: 208px;
+    margin-left: 71px;
   }
 }
-@media (max-width: 991px) {
-  .u-header .u-menu-1 {
-    margin-right: -369px;
-  }
-}
-@media (max-width: 767px) {
-  .u-header .u-menu-1 {
-    margin-right: -268px;
-  }
-}
-@media (max-width: 575px) {
-  .u-header .u-menu-1 {
-    margin-right: -156px;
-  }
-}
+
+
+
  .u-footer {
   background-image: none;
 }
